# shrink-wrap

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  cmake_install.cmake  edge_collapse_bounded_normal_change.cpp  edge_collapse_garland_heckbert.cpp  environment.yml  mixed_inputs_wrap  mixed_inputs_wrap.cpp  output_helper.h  pause_and_resume_wrapping  pause_and_resume_wrapping.cpp  point_set_wrap  point_set_wrap.cpp  shrink_wrap  shrink_wrap.cpp  shrink_wrap.h  shrink_wrap_absolute.cpp  shrink_wrap_relative.cpp  simplify.h  successive_wraps  successive_wraps.cpp  triangle_mesh_wrap  triangle_mesh_wrap.cpp  triangle_soup_wrap  triangle_soup_wrap.cpp  volumetric_wrap  volumetric_wrap.cpp  wrap_from_cavity  wrap_from_cavity.cpp
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: .gitignore  kpf_robinson_tower_100_100.off  kpf_robinson_tower_100_250.off  kpf_robinson_tower_100_500.off  kpf_robinson_tower_250_100.off  kpf_robinson_tower_250_250.off  kpf_robinson_tower_250_500.off  pandan_valley.off  pandan_valley_100_100.off  pandan_valley_100_250.off  pandan_valley_100_500.off
